<resources>
    <string name="app_name">Musiquendo</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="albums">Albums</string>
    <string name="artists">Artists</string>
    <string name="lists">Playlists</string>
    <string name="songs">Songs</string>
    <string name="licenses">Licenses</string>
    <string name="settings">Settings</string>
    <string name="library">Library</string>
    <string name="version">Version 1.0</string>
    <string name="account">Cuenta</string>
    <string name="main">Main</string>
    <string name="search">Search</string>
    <string name="filter">Filter</string>
    <string name="title_activity_album">Album</string>
    <string name="title_activity_artist">Artist</string>
    <string name="title_activity_playlist">Playlist</string>
    <string name="title_activity_library">Library</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_licenses">Licenses</string>
    <string name="image_transition" translatable="false">image_transition</string>
    <string name="play_mode">Playlist mode</string>
    <string name="play_mode_on">When a song finishes automatically the next one begins.
        It also allows navigation between songs.</string>
    <string name="play_mode_off">When the current song stops playing it will not continue to the next.</string>
    <string name="application_display">Main view display mode</string>
    <string name="display_description">In this option you can change the view mode of the main view.</string>
    <string name="grid">Grid</string>
    <string name="list">List</string>
    <string name="download_settings">Download settings</string>
    <string name="download_description">Allows downloading of both albums and songs only via WiFi connection.</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="albums_name">Albums by name</string>
    <string name="albums_more_populars">More popular</string>
    <string name="albums_populars_month">Popular this month</string>
    <string name="albums_populars_week">Popular this week</string>
    <string name="header_bottomsheet">Choose an option</string>
    <string name="artists_name">Artists by name</string>
    <string name="playlists_creation_date">Creation date</string>
    <string name="playlists_by_name">Sort by name</string>
    <string name="artist_detail_name">Artist name</string>
    <string name="no_website">No website</string>
    <string name="descargar">Download</string>
    <string name="playing">Playing</string>
    <string name="prev">Prev</string>
    <string name="play_pause">Play/Pause</string>
    <string name="next">Next</string>
    <string name="unavailable_download">Unable to download the song. Review the settings screen.</string>
    <string name="downloading_song">Downloading song</string>
    <string name="track_already_downloaded">Track alredy exists in the downloads directory</string>
    <string name="play_track">Play track</string>
    <string name="delete_track">Delete track</string>
    <string name="error_deleting_track">An error has occurred deleting the track</string>
    <string name="delete_track_warning">Can not erase a song while playing downloaded songs</string>
    <string name="not_free_available">Not available in the free version</string>
    <string name="not_free_feature">Feature not available in the free version</string>
    <string-array name="albums_filter">
        <item>name</item>
        <item>popularity_total</item>
        <item>popularity_month</item>
        <item>popularity_week</item>
    </string-array>
    <string-array name="artists_filter">
        <item>name</item>
        <item>popularity_total</item>
        <item>popularity_month</item>
        <item>popularity_week</item>
    </string-array>
    <string-array name="playlists_filter">
        <item>name</item>
        <item>creationdate</item>
    </string-array>
    <string-array name="licenses_headers">
        <item>Máster Universitario en Informática Móvil</item>
        <item>Jamendo API</item>
        <item>Butterknife</item>
        <item>Picasso</item>
        <item>Volley</item>
        <item>Gson</item>
        <item>Flipboard bottomsheet</item>
        <item>CircleImageView</item>
        <item>PlaceHolderView</item>
        <item>Iconos8</item>
        <item>Application logo</item>
    </string-array>
</resources>